--- a/resources/css/site.css
+++ b/resources/css/site.css
@@ -1,8 +1,8 @@
 #loading-screen {
   position: relative;
   z-index: 2;
-  width: 600px;
-  height: 500px;
+  width: 100%;
+  height: 100%;
   background-color: #000000;
   opacity: 1;
   transition: 1s opacity;
@@ -99,4 +99,13 @@
   overflow: hidden;
   /* Opera 15+, Chrome 25+, IE 10+, Firefox 16+, Safari 6.1+, iOS 7+, Android 4.4+ */
   background-image: radial-gradient(#ffffff, #838383);
+}
+#canvas-container {
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: 20;
+  height: 100%;
+  width: 100%;
+  overflow: hidden;
 }
