--- a/resources/css/site.css
+++ b/resources/css/site.css
@@ -2,10 +2,11 @@
   position: relative;
   z-index: 2;
   width: 100%;
-  height: 100%;
+  height: 108%;
   background-color: #000000;
   opacity: 1;
   transition: 1s opacity;
+  overflow: hidden;
 }
 
 #loading-screen.fade-out {
@@ -108,4 +109,15 @@
   height: 100%;
   width: 100%;
   overflow: hidden;
+}
+
+.close-btn {
+  font-weight: 900;
+  font-size: 50px;
+  cursor: pointer;
+  font-family: Arial, Helvetica, sans-serif;
+  position: absolute;
+  left: 100px;
+  z-index: 100000;
+  display: none;
 }
